[package]
authors = ['Bholdus <https://github.com/bholdus>']
description = "FRAME pool management pallet"
edition = '2018'
homepage = 'https://bholdus.com'
name = 'bholdus-pools'
license = "Apache-2.0"
readme = 'README.md'
repository = 'https://github.com/bholdus/bholdus-chain'
version = "1.0.14"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# Substrate dependencies
[dependencies]
codec = { default-features = false, features = [
	"derive",
	"max-encoded-len",
], package = "parity-scale-codec", version = "2.2.0" }
scale-info = { default-features = false, features = [
	'derive',
], version = '1.0' }
frame-benchmarking = { default-features = false, git = 'https://github.com/bholdus/substrate.git', optional = true, branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
frame-support = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-runtime = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-std = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }

# local dependencies
bholdus-tokens = {path = '../tokens', default-features = false }
bholdus-support = {path = '../support', default-features = false }
bholdus-primitives = { default-features = false, path = '../../primitives/bholdus' }

[dev-dependencies]
serde = '1.0.119'
sp-core = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }
sp-io = { default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'bholdus-monthly-2021-11', version = '4.0.0-dev' }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'bholdus-tokens/runtime-benchmarks',
]
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'bholdus-tokens/std',
	'bholdus-support/std',
	'bholdus-primitives/std',
	'sp-std/std',
	'sp-runtime/std',
]
try-runtime = ['frame-support/try-runtime']
