[package]
name = "bholdus-support"
version = "3.0.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.129", optional = true }
#codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.1"

[dependencies.codec]
default-features = false
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"num-traits/std",
	"frame-support/std",
]
