[package]
name = "bholdus-support"
version = "1.0.13"
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
#codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.1"

[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-11'
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-11'
version = '4.0.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-11'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-11'
version = '4.0.0-dev'

[features]
default = ["std"]
std = [
	'serde',
	'codec/std',
	'scale-info/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'num-traits/std',
	'frame-support/std',
]
