[package]
name = "bholdus-support"
version = "1.0.18"
edition = "2021"

[dependencies]
serde = { version = "1.0.124", optional = true }
num-traits = { version = "0.2.14", default-features = false }
impl-trait-for-tuples = "0.2.1"

[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[dependencies.sp-io]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[dependencies.sp-std]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[dependencies.frame-support]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[features]
default = ["std"]
std = [
	'serde',
	'codec/std',
	'scale-info/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'num-traits/std',
	'frame-support/std',
]
