[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '4.0.0-dev'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# Substrate dependencies
[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '2.2.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
optional = true
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
# path = '../frame/system'
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dev-dependencies]
serde = '1.0.119'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
tag = 'monthly-2021-10'
version = '4.0.0-dev'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
