[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = "1.0.15"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# Substrate dependencies
[dependencies]
codec = { default-features = false, features = [
	"derive",
	"max-encoded-len",
], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { default-features = false, features = [
	'derive',
], version = '2.0.1' }
frame-benchmarking = { default-features = false, git = "https://github.com/BHONetwork/substrate.git", optional = true, branch = "bho-polkadot-v0.9.18" }
frame-support = { default-features = false, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
frame-system = { default-features = false, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }

[dev-dependencies]
serde = '1.0.119'
sp-core = { default-features = false, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
sp-io = { default-features = false, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }
sp-runtime = { default-features = false, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.18" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
