[package]
authors = ['Bholdus <https://github.com/bholdus>']
description = 'Pallet Tokens'
edition = '2018'
homepage = 'https://bholdus.com'
name = 'pallet-tokens'
license = "Apache-2.0"
readme = 'README.md'
repository = 'https://github.com/bholdus/bholdus-chain'
version = '1.0.0'


[dependencies]
#codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
enumflags2 = { version = "0.6.2" }
#max-encoded-len = { version = "3.0.0", default-features = false, path = "../../max-encoded-len", features = [ "derive" ] }

[dependencies.max-encoded-len]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
optional = true
branch = 'bholdus-monthly-2021-07'
version = '3.1.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
# path = '../frame/system'
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

# sp-std = { default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
# sp-runtime = { default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
# frame-support = { default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
# frame-system = { default-features = false, version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
# frame-benchmarking = { default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }


[dev-dependencies]
# sp-core = {version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
# sp-std = {version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
# sp-io = {version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
# pallet-balances = {version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }

[dependencies.sp-core]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'
# branch = 'bholdus-monthly-2021-07'
# path = '../sub-primitives/core'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[dev-dependencies.sp-std]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'


[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[features]
default = ['std']
std = [
	'codec/std',
	'max-encoded-len/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'sp-runtime/std',
]
runtime-benchmarks = ['frame-benchmarking']
