[package]
authors = ['Bholdus <https://github.com/bholdus>']
description = "FRAME digital tokens management pallet"
edition = "2021"
homepage = 'https://bholdus.com'
name = 'bholdus-tokens'
license = "Apache-2.0"
readme = 'README.md'
repository = 'https://github.com/bholdus/bholdus-chain'
version = "1.0.19"


[dependencies]
enumflags2 = { version = "0.6.2" }

[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
optional = true
branch = "bho-polkadot-v0.9.22"

[dependencies.frame-support]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[dependencies.frame-system]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[dependencies.sp-std]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[dependencies.sp-core]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[dependencies.bholdus-support]
default-features = false
package = "bholdus-support"
path = '../support'

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[dev-dependencies.sp-std]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"


[dev-dependencies.pallet-balances]
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.22"

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'bholdus-support/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'sp-runtime/std',
]
runtime-benchmarks = ['frame-benchmarking',
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",]
