[package]
name = "bholdus-evm-precompile-template"
authors = ["Bholdus"]
description = "A Precompile Template"
edition = "2018"
version = "1.0.13"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
slices = "0.2.0"

# Bholdus
precompile-utils = { package = 'bholdus-evm-precompile-utils', path = "../utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
    "max-encoded-len",
] }
frame-support = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }
frame-system = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }
sp-core = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }
sp-io = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }
sp-runtime = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }
sp-std = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/bholdus/frontier", branch = "bholdus-monthly-2021-11", default-features = false }
pallet-evm = { git = "https://github.com/bholdus/frontier", branch = "bholdus-monthly-2021-11", default-features = false }

# Local deps
pallet-template = { path = "../../pallets/template", default-features = false }


[dev-dependencies]
derive_more = { version = "0.99" }
serde = { version = "1.0.100" }
sha3 = "0.8"

codec = { package = "parity-scale-codec", version = "2.0.0", features = [
    "max-encoded-len",
] }
scale-info = { version = "1.0", default-features = false, features = [
    "derive",
] }
sp-runtime = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11" }
pallet-timestamp = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11" }
pallet-balances = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11" }
bholdus-tokens = { path = "../../pallets/tokens" }
bholdus-support = { path = "../../pallets/support" }

[features]
default = ["std"]
std = [
    "codec/std",
    "fp-evm/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-template/std",
    "precompile-utils/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
