[package]
name = "bholdus-evm-precompile-utils"
authors = ["Bholdus"]
description = "Utils to write EVM precompiles."
edition = "2018"
version = "1.0.12"

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
sha3 = { version = "0.9", default-features = false }

# Bholdus
precompile-utils-macro = { package = "bholdus-evm-precompile-utils-macro", path = "macro" }

# Substrate
codec = { package = "parity-scale-codec", version = "2.2", default-features = false }
frame-support = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }
frame-system = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }
sp-core = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }
sp-io = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }
sp-std = { git = "https://github.com/bholdus/substrate", branch = "bholdus-monthly-2021-11", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/Bholdus/frontier.git", branch = "bholdus-monthly-2021-11", default-features = false }
pallet-evm = { git = "https://github.com/Bholdus/frontier.git", branch = "bholdus-monthly-2021-11", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
    "codec/std",
    "fp-evm/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-evm/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
]
