[package]
authors = ["Bholdus <dung.lam@hawking.network>"]
edition = "2018"
homepage = "https://bholdus.com"
license = "Apache-2.0"
name = "bholdus-primitives"
repository = "https://github.com/bholdus/bholdus-chain/"
version = "1.0.15"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.serde]
default-features = false
version = '1.0.124'
optional = true

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'

[dependencies.codec]
default-features = false
features = ['derive', 'max-encoded-len']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dependencies.sp-std]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[dependencies.pretty_assertions]
optional = true
version = '0.6.1'

[dev-dependencies.sp-serializer]
default-features = false
git = "https://github.com/BHONetwork/substrate.git"
branch = "bho-polkadot-v0.9.18"

[features]
default = ["std"]
std = [
    "serde",
    "scale-info/std",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
