[package]
authors     = ["Daniel Lam"]
description = "BHO runtime common primitives"
edition     = "2021"
license     = "Unlicense"
name        = "common-primitives"
version = "1.0.19"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
serde = {default-features = false, version = '1.0.124', optional = true}
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

sp-core = { default-features = false, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.22" }
sp-runtime = { default-features = false, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.22" }
sp-std = { default-features = false, git = "https://github.com/BHONetwork/substrate.git", branch = "bho-polkadot-v0.9.22" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
    "scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
